@@ -3,17 +3,23 @@
 nodeGame ready-to-run on the Heroku cloud.
 
 Read instructions on the nodeGame [wiki](https://github.com/nodeGame/nodegame/wiki/nodeGame-on-Heroku).
- 
+
 
 ## Additional Games in Demo page.
 
 The git repos of all the games on then nodeGame's Heroku [Demo](https://nodegamedemo.herokuapp.com/) page:
 
  - [ultimatum-game](https://github.com/nodeGame/ultimatum-game) (default)
- - [car-sharing](https://github.com/nodeGame/car-sharing) 
+ - [car-sharing](https://github.com/nodeGame/car-sharing)
  - [dictator](https://github.com/nodeGame/dictator)
  - [HawkDove](https://github.com/ewenw/HawkDove)
  - [imgscore](https://github.com/nodeGame/imgscore)
  - [meritocracy-game](https://github.com/nodeGame/meritocracy-game)
  - [prisonersgame](https://github.com/shakty/prisonersgame)
  - [stopgo](https://github.com/nodeGame/stopgo)
+
+See the [Demo Repository](https://nodeGame/nodegamedemo).
+
+## No-Phantoms
+
+Phantom JS testing is currently not available on Heroku.
